# SeekDeep-DiscordBot

./: .env.default  .env.example  .gitattributes  .gitignore  .previous_chat_model.txt  AGENTS.md  AGENT_AUDIT_2026-05-27.md  AUDIT_DESIGNER_2026-05-25.md  CODEX_REPO_BRIEF.md  COMMANDS.md  CONTRIBUTING.md  DISCLAIMER.md  HANDOFF_DESIGNER.md  INTEGRATION.md  JULES_REPO_AUDIT_REPORT.md  MAINTAINER.md  PLANNED.md  README.md  README_CONTEXT_ROUTING_V3.txt  README_ENV_INCLUDED.txt  README_START_HERE.txt  RELEASE_CHECKLIST.md  RELEASE_SIGNING.md  REQUIREMENTS.md  RUN_THIS_FIRST.txt  SECURITY.md  SMOKE_TEST.md  apply_batch1_server_utility_patch.ps1  apply_batch2_image_queue_patch.ps1  apply_discord_rest_abort_hotfix.ps1  apply_drawme_dedupe_polish.ps1  apply_early_image_route_hotfix.ps1  apply_image_prompt_refinement_patch.ps1  apply_queue_api_repair.ps1  apply_recent_images_preview_patch.ps1  apply_response_footer_patch.ps1  apply_response_footer_patch_v2.ps1  apply_stabilized_dispatch_patch.ps1  apply_status_metrics_patch_v2.ps1  apply_typing_encoding_hotfix.ps1  (+141 more)
.claude/: settings.local.json
.github/: dependabot.yml
SeekDeepOnline/: app.html  index.html  shared.html
data/: archive-guild-config.json
docs/: AUDIT_2026-05-25.md  DISCORD_SETUP.md  ENDPOINT_COVERAGE.md  brand.html  chat.html  landing.html  slash-parity.md  smartscreen-README.md  styles.css  tweaks-panel.jsx
e2e/: control-center.spec.mjs  csp.spec.mjs
gui/: add-model.html  add-model.page.js  api.html  api.page.js  app.html  app.page1.js  app.page2.js  app.page3.js  app.page4.js  app.page5.js  app.page6.js  architecture.html  architecture.page.js  boot.html  boot.page.js  bot-bridge.html  bot-bridge.js  brand.html  changelog.html  changelog.page.js  chat.html  chat.page1.js  chat.page2.js  chat.page3.js  config-render.js  docs.flags.page.js  docs.html  docs.page.js  emoji-vault.html  emoji-vault.js  events.js  feature-catalog.json  fetch.js  fix-action.js  force-react.html  force-react.js  image-ab.html  image-ab.page.js  index.html  index.page.js  (+49 more)
handoff/: .env.redacted  audit-output-20260513-100918.txt
lib/: clean-duration-parse.js  image-mime.js  image-prompt-subject.js  pending-image-queue-plan.js  react-pattern.js  url-fetch-policy.js
patches/: apply_archive_channel_config_v1_20260513-203004.cjs  apply_archive_channel_config_v2_20260513-203120.cjs  apply_archive_coin_thread_names_v1_20260513-211702.cjs  apply_archive_coin_thread_names_v2_20260513-212039.cjs  apply_archive_count_backfill_status_v1_20260513-224042.cjs  apply_archive_first_use_setup_v1_20260513-205456.cjs  apply_archive_for_alias_v1_20260513-200608.cjs  apply_archive_for_alias_v2_20260513-201906.cjs  apply_archive_for_alias_v3_20260513-202028.cjs  apply_archive_intro_cleanup_v1_20260513-214209.cjs  apply_archive_permission_ux_20260513-193742.cjs  apply_archive_role_mention_route_v1_20260513-195222.cjs  apply_archive_role_mention_route_v2_20260513-195516.cjs  apply_archive_setup_alias_v1_20260514-060828.cjs  apply_archive_status_target_route_v2_20260513-230502.cjs  apply_archive_status_v2_commands_quiet_pack.ps1  apply_archive_tracked_count_v3_20260513-212918.cjs  apply_backend_refined_prompt_patch.ps1  apply_botanical_slang_grounding.ps1  apply_broader_image_intent_routing.ps1  apply_build_prompt_with_memory_safe_v14_20260514-110032.cjs  apply_canonical_command_name_v1_20260514-054225.cjs  apply_consolidated_archive_repair.ps1  apply_discord_thread_archive_storage.ps1  apply_ephemeral_flags_v1.cjs  apply_focused_research_search_query_patch.ps1  apply_gritty_painterly_refinement_patch.ps1  (+278 more)
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs  sidecar.rs
(+64 files in other folders)
