[package]
name = "seekdeep"
# Keep this in sync with package.json. Rust uses env!("CARGO_PKG_VERSION")
# for the extraction stamp, the update-check current/latest compare, and
# the stale-server identity check in boot_sequence. If this drifts from
# package.json, the bundled FastAPI server (which reads package.json at
# boot via _read_pkg_version) will report a different version than the
# Rust shell — making the stale-server guard misfire on every launch.
version = "10.38.141"
description = "SeekDeep — local AI assistant (Discord bot + standalone GUI)"
authors = ["NathanNeurotic"]
edition = "2021"
rust-version = "1.77"

# This stops Cargo from looking at the parent dir for a workspace it
# doesn't belong to.
[lib]
name = "seekdeep_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.0", features = [] }

[dependencies]
tauri = { version = "2.0", features = ["tray-icon"] }
tauri-plugin-opener = "2.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
# AUD-003: robust URL parsing for the open_external scheme/host allowlist.
# Already in the dependency tree via tauri; declaring it direct just lets us
# use url::Url for validation.
url = "2"

[target.'cfg(windows)'.dependencies]
# Bind the spawned AI-server child to a Win32 Job Object (kill-on-job-close) so
# the OS tears it down whenever the shell dies by ANY means — Task-Manager kill,
# panic, hard crash — not just the clean-exit handlers. Focused safe-API crate.
win32job = "2"

[features]
# Bundle config — keep size lean. No Updater plugin in v1.
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
